commit before changing home html file

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
     <link rel="stylesheet" th:href="@{/css/fab.css}" />
     <link rel="stylesheet" th:href="@{/css/dropdown.css}" />
+    <link rel="stylesheet" th:href="@{/css/forms.css}" />
 </head>
 
 <div th:fragment="container" class="container main-container"></div>
