--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/fab.css}" />
     <link rel="stylesheet" th:href="@{/css/dropdown.css}" />
     <link rel="stylesheet" th:href="@{/css/forms.css}" />
-    <link rel="stylesheet" th:href="@{/css/preview-cards.css}" />
+    <link rel="stylesheet" th:href="@{/css/dashboard-card.css}" />
 </head>
 
 <div th:fragment="container" class="container main-container"></div>
